--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node build/dist/index.js",
+    "start-dev": "react-scripts start",
     "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
